--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -9,11 +9,7 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "checkJs": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"] // Questa è la riga chiave per VS Code
-    }
+    "checkJs": true
   },
   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"]
 }
