--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@skeletonlabs/skeleton": "^3.1.3",
     "@skeletonlabs/skeleton-svelte": "^1.2.3",
-    "@supabase/supabase-js": "^2.50.0"
+    "@supabase/supabase-js": "^2.50.0",
+    "svelte-spa-router": "^4.0.1"
   }
 }
