feat: Implement API service for plant management and user profile updates
- Added `api.js` to centralize API calls for plants, growth logs, health logs, AI advices, and user profiles.
- Introduced `imageClassifier.js` for species identification using Pl@ntNet API.
- Refactored image utility functions, including base64 to Blob conversion.
- Updated `Dashboard.svelte`, `PlantDetail.svelte`, `UserProfile.svelte`, and other components to utilize the new API service.
- Improved error handling and user notifications with toast messages.
- Updated Docker Compose for Supabase services to use the latest images and simplified health check commands.
- Fixed minor typos and improved code readability across various files.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,38 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}"
+            ],
+            "name": "Launch Extension",
+            "outFiles": [
+                "${workspaceFolder}/out/**/*.js"
+            ],
+            "preLaunchTask": "npm",
+            "request": "launch",
+            "type": "extensionHost"
+        },
+        {
+            "name": "Launch via NPM",
+            "request": "launch",
+            "runtimeArgs": [
+                "run-script",
+                "debug"
+            ],
+            "runtimeExecutable": "npm",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+    {
+        "name": "Attach to Chrome",
+        "port": 9222,
+        "request": "attach",
+        "type": "chrome",
+        "webRoot": "${workspaceFolder}"
+    },
+        {
             "type": "node-terminal",
             "name": "Run frontend dev server",
             "request": "launch",
