--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "@skeletonlabs/skeleton": "^3.1.3",
     "@skeletonlabs/skeleton-svelte": "^1.2.3",
     "@supabase/supabase-js": "^2.50.0",
+    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@tensorflow/tfjs": "^4.22.0",
     "svelte-spa-router": "^4.0.1"
   }
 }
